Created classes to interact with websockets and the banking api.

--- a/src/main/resources/assets/nibanking/lang/en_us.json
+++ b/src/main/resources/assets/nibanking/lang/en_us.json
@@ -7,5 +7,6 @@
   "item.nibanking.gold_coin": "Gold Coin",
   "item.nibanking.iron_coin": "Iron Coin",
   "item.nibanking.netherite_coin": "Netherite Coin",
-  "item.nibanking.zinc_coin": "Zinc Coin"
+  "item.nibanking.zinc_coin": "Zinc Coin",
+  "item.nibanking.debit_card": "Debit Card"
 }
