Mixin to correct function and correctly calculates player money in inventory. Just need to implement finishing the transaction between the player and shopkeeper.

--- a/src/main/resources/assets/nibanking/lang/en_us.json
+++ b/src/main/resources/assets/nibanking/lang/en_us.json
@@ -3,10 +3,14 @@
   "itemGroup.nibanking": "NeoIndustria Banking",
 
   "_comment.itemNames": "Item Names",
+  "item.nibanking.base_coin": "Base Coin",
   "item.nibanking.copper_coin": "Copper Coin",
   "item.nibanking.gold_coin": "Gold Coin",
   "item.nibanking.iron_coin": "Iron Coin",
   "item.nibanking.netherite_coin": "Netherite Coin",
   "item.nibanking.zinc_coin": "Zinc Coin",
-  "item.nibanking.debit_card": "Debit Card"
+  "item.nibanking.debit_card": "Debit Card",
+
+  "_comment.toolTips": "Item ToolTips",
+  "tooltip.nibanking.coin_item": "&7Value: &6$value"
 }
